changed onSectionClick to use DOM traversal instead of element ref fixed layout issues on watchlist and shows

--- a/src/components/show.css
+++ b/src/components/show.css
@@ -1,31 +1,29 @@
 .show {
   max-width: 400px;
   min-width: 300px;
+  height: 475px;
   border-radius: 0.5rem;
   box-shadow: 0 0 5px black;
 }
 
 .show__inner {
-  height: 100%;
   padding: 1.4rem;
-}
-
-.show__inner::after {
-  content: "";
-  clear: both;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .show__img {
   border-radius: 0.5rem;
-  margin: 0 auto;
 }
+
+.show__content {}
 
 .show__name {
   text-align: center;
   font-size: 1.2rem;
   font-weight: 600;
-  margin: 1rem 0;
 }
 
 .show__status {
@@ -59,7 +57,6 @@
 }
 
 .show__button {
-  float: right;
   width: 3rem;
   height: 3rem;
   border: none;
@@ -70,6 +67,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  align-self: flex-end;
 }
 
 .show__button:hover,
